# practica

./: Dockerfile  README.md  docker-compose.yml  easyocr-rus-train.ipynb  loop.py  main.py  pyproject.toml  worker_api.py
dataset_v4/: labels.csv
model/v2/: ru_ocr.py
model/v4/: ru_ocr.py
worker/: worker_easy_ocr.py
worker/dataset_v2/: labels.csv
worker/test_results_yolo/json/: ocr_results.json
