[project]
name = "practica"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "ultralytics>=8.4.60,<9.0.0",
    "easyocr>=1.7.2,<2.0.0",
    "fastapi[standard]>=0.136.3,<0.137.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
